--- a/front-end/package.json
+++ b/front-end/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@rainbow-me/rainbowkit": "^2.1.2",
+    "@tanstack/react-query": "^5.40.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "siwe": "^2.3.2",
+    "viem": "^2.13.3",
+    "wagmi": "^2.9.8"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
