--- a/back-end/package.json
+++ b/back-end/package.json
@@ -13,6 +13,7 @@
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "nodemon": "^3.1.2"
+    "nodemon": "^3.1.2",
+    "siwe": "^2.3.2"
   }
 }
