--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@rainbow-me/rainbowkit": "^2.1.2",
     "@tanstack/react-query": "^5.40.0",
+    "ethers": "^6.13.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "siwe": "^2.3.2",
